fixed spacing on desktop

--- a/src/components/ActionLog/ActionLog.scss
+++ b/src/components/ActionLog/ActionLog.scss
@@ -18,10 +18,11 @@
     margin-top: -1rem;
 
     @include desktop {
+        margin-top: 0rem;
         padding: 1rem;
         width: 17rem;
-        height: 30rem;
-        max-height: 30rem;
+        height: 25rem;
+        max-height: 25rem;
     }
 
     &__header {
