--- a/src/components/Map/Map.scss
+++ b/src/components/Map/Map.scss
@@ -26,7 +26,7 @@
     font-size: .7rem;
     
     @include desktop{
-        margin-top: -15rem;
+        margin-top: -8rem;
         margin-bottom: 3rem;
         font-size: 1.2rem;
     }
