--- a/src/components/PlayerReference/PlayerReference.scss
+++ b/src/components/PlayerReference/PlayerReference.scss
@@ -23,7 +23,7 @@
         width: 17rem;
         margin-bottom: 2rem;
         margin-top: 0;
-        height: 30rem;
+        height: 25rem;
     }
 }
 
@@ -121,6 +121,7 @@
 
         @include desktop {
             font-size: 1.4rem;
+            margin-bottom: 2rem;
         }
 
         &:hover {
